# university_projects

Algorytmy i Struktury Danych/: README.md
Elementy Analizy Numerycznej/: Main.dfm  Main.pas  README.md  RownaniaJacobi.dpr  RownaniaJacobi.dproj  UnitIntervalJacobi.pas  UnitJacobi.pas
Grafika Komputerowa/: .gitignore  README.md  TODO.md  doorman.mtl  museum_next_textures.mtl  museum_next_textures_3.mtl  museum_next_textures_fixed.blend  museum_next_textures_fixed.blend1  museum_next_textures_fixed.mtl  muzeum.blend  muzeum_merged.blend  muzeum_merged.mtl  untitled.blend  untitled.blend1
Komunikacja Czlowiek Komputer/: README.md
Optymalizacja Kombinatoryczna/: README.md  dlugie_czasy_maintenance  dlugie_czasy_operacji  krotkie_czasy_maintenance  krotkie_czasy_operacji  main  maintenance_10_procent  maintenance_20_procent  maintenance_30_procent  maintenance_40_procent  maintenance_50_procent  ready_time_10_procent  ready_time_30_procent  ready_time_50_procent  ready_time_70_procent  srednie_czasy_maintenance  srednie_czasy_operacji
Podstawy Programowania/: .gitignore  README.md  addclient.lfm  addclient.pas  editclient.pas  findclient.pas  libvalidator.dylib  linkedlist.pas  main.pas  mycolorbutton.pas  project1.lpi  project1.lpr  project1.lps  tmybutton.lpk  tmybutton.pas  (+3 more)
Programowanie Obiektowe/C++/: BaseTicket.cpp  BaseTicket.h  Booking.cpp  Booking.h  BookingAssistant.cpp  BookingAssistant.h  CMakeLists.txt  JoinedTicket.cpp  JoinedTicket.h  PlaneTicket.cpp  PlaneTicket.h  README.md  ReservationBase.h  ShipTicket.cpp  ShipTicket.h  filename  main.cpp
(+552 files in other folders)
